quotes/src/main/k8s-config/do/grpc-do-k8s-deploy.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: grpc
  namespace: do-myproject
  labels:
    app: grpc
spec:
  replicas: 4
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: grpc
  template:
    metadata:
      annotations:
        kubernetes.io/change-cause: "grpc version 1.7.2"
      labels:
        app: grpc
    spec:
      containers:
      - name: grpc
        image: balchu/grpc:1.7.2
        ports:
        - containerPort: 50051
          protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512M
            cpu: 1000m
          requests:
            memory: 512M
            cpu: 500m
        volumeMounts:
          - mountPath: "/data"
            name: datadir
      volumes:
        - name: datadir
          emptyDir: {}

#          persistentVolumeClaim:
#            claimName: sample-pv-claim

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
