quotes/src/main/k8s-config/do/grpc-do-k8s-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: grpc-service
  namespace: do-myproject
  labels:
    app: grpc
spec:
  ports:
  -  protocol: TCP
     port: 9999
     targetPort: 50051
     name: grpc
  selector:
    app: grpc
