quotes/src/main/k8s-config/do/istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grpc
  namespace: do-myproject
spec:
  hosts:
    - "*"
  http:
    - route:
        - destination:
            host: grpc
